# Chye-ComfyUI-Toolset

./: .aider.chat.history.md  .aider.input.history  .gitignore  COMFYUI_DEVELOPMENT_LIMITATIONS.md  INTERACTIVE_PAINTER_README.md  README.md  __init__.py  enhanced_load_image_spec.md  film_grain_math_explanation.md  film_grain_node_visual.md  interactive_painting_plan.md  node_mockup.md  nodes.py  pyproject.toml  requirements.txt  test_file_tools.py  test_global_color_grading.py  test_halation_color_grading.py  test_interactive_painting.py
Presets/Preprompts/: Test.txt  cinematic.txt  professional_photo.txt
Presets/api_keys/: anthropic_api_key.txt  deepseek_api_key.txt  openai_api_key.txt
categories/: __init__.py  file_tools.py  image_tools.py  latent_tools.py  math_tools.py  post_process.py  prompt_tools.py  video_tools.py
js/: cyh_painter.js
preprompts/: .gitignore
preprompts/providers/anthropic/: high_detail.txt
shared/: __init__.py  constants.py  helpers.py  validators.py
web/comfyui/: text_file_loader.js
