[project]
name = "chye-asplatent"
description = "ComfyUI custom node for generating aspect ratio specific latents for Flux, Qwen, and SDXL models"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/chyer/Chye-ASPLatent"

[tool.comfy]
PublisherId = "chyer"
DisplayName = "Chye-ASPLatent"
Icon = ""
