[project]
name = "chye-comfyui-toolset"
description = "A comprehensive toolset of ComfyUI custom nodes for latent generation, image processing, and workflow utilities"
version = "2.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/chyer/Chye-ComfyUI-Toolset"

[tool.comfy]
PublisherId = "chyer"
DisplayName = "Chye-ComfyUI-Toolset"
Icon = ""
